# fundos

./: .gitignore  Cargo.toml  README.md  config.yaml  install.ps1  install.sh  rust-toolchain
.github/workflows/: rust.yml
config/: config.toml  config.yaml  default.toml  default.yaml  schema.yaml
src/: app.rs  config.rs  downloader.rs  history.rs  lib.rs  logger.rs  main.rs  message.rs  statusbar.rs
src/charts/: fund.rs
src/cvm/: config.rs  downloader.rs  fund.rs  indicator.rs  informe.rs  mod.rs  portfolio.rs
src/provider/: cache.rs  downloader.rs  mod.rs
src/provider/cvm/: mod.rs
src/provider/cvm/fund/: mod.rs  options.rs
src/provider/cvm/informe/: mod.rs  options.rs
src/provider/cvm/portfolio/: mod.rs  options.rs
src/provider/indices/: mod.rs
src/provider/indices/cdi/: mod.rs  options.rs
src/provider/indices/ibovespa/: mod.rs  options.rs
src/tabs/: home_tab.rs  mod.rs
src/tabs/fund_tab/: fund_tab.rs  mod.rs
src/tabs/fund_tab/panel/: assets.rs  details.rs  mod.rs  profit.rs
src/ui/: loading.rs  mod.rs
src/ui/charts/: mod.rs  profit.rs  stats.rs
src/ui/download/: mod.rs
src/ui/fund/: mod.rs
src/ui/fund/modal/: asset.rs  mod.rs  search.rs
src/ui/fund/panel/: detail.rs  mod.rs  portfolio.rs  profit.rs
src/ui/fund/tab/: dashboard.rs  mod.rs
src/ui/modal/: about.rs  config.rs
src/ui/tabs/: config_tab.rs  home_tab.rs  mod.rs
src/util/: mod.rs  toaster.rs
