[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    #"default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",
    "wayland"
] }

log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_dock = "0.12.0"
egui_extras = { version = "0.27.2", default-features = true, features = [
    "datepicker",
] }
egui-phosphor = "0.5.0"
chrono = "0.4.19" 

tokio = { version = "1.37.0", features = ["full"] }
partialzip = "3.4.1"
curl = {version = "0.4.46", default-features = false}
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
egui_plot = "0.27.2"
polars = { version = "0.32.0", features = ["lazy", "strings", "describe", "diagonal_concat", "json"] }
glob = "0.3.1"
regex = "1.10.5"
unicode-normalization = "0.1.23"
currency_rs = "1.3.0"
tokio-util = "0.7.11"
thiserror = "1.0.63"
lru = "0.12.3"
serde_json = "1.0.120"
once_cell = "1.19.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
